docker-compose up ok

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,28 @@
 version: "3.8"
 services:
-  db-mysql:
+  db_mysql_service:
     tty: true
     image: mysql:8.0
     command: --default-authentication-plugin=mysql_native_password
     cap_add:
       - SYS_NICE #  incluir as regras necessárias para permitir o que o MySQL execute functions
-    container_name: mysql-time
+    container_name: mysql_time
     environment:
       MYSQL_ROOT_PASSWORD: db-#14.bas
     volumes:
-      - ./db-mysql/data:/var/lib/mysql
+      - ./db_mysql/data:/var/lib/mysql
     ports:
       - "8406:3306"
-  time_api:
+  time_api_service:
     tty: true
     depends_on:
-      - db-mysql
+      - db_mysql_service
     links:
-      - db-mysql
-    image: api
+      - db_mysql_service
+    image: time_api
     container_name: time_api
     build: "time_api"
     volumes:
       - ./time_api:/var/www/html
     ports:
-      - "8084:80"
+      - "8084:8000"
