--- a/time_api/Dockerfile
+++ b/time_api/Dockerfile
@@ -19,7 +19,11 @@ RUN composer install
 COPY ./docker-config/fpm-pool.conf /etc/php7/php-fpm.d/www.conf
 COPY ./docker-config/default.conf /etc/nginx/conf.d
 COPY ./docker-config/supervisord.conf /etc/supervisor/conf.d/supervisord.conf
+COPY ./docker-config/php.ini /etc/php7/php.ini
 
-EXPOSE 80
+RUN mv .env.production .env
+RUN composer install
+
+EXPOSE 8000
 
 CMD ["/usr/bin/supervisord", "-c", "/etc/supervisor/conf.d/supervisord.conf"]
