--- a/time_api/docker-config/api-nginx.conf
+++ b/time_api/docker-config/api-nginx.conf
@@ -1,8 +1,8 @@
 server {
-    listen      80;
-    listen      [::]:80;
+    listen      8000;
+    listen      [::]:8000;
     #server_name  localhost;
-    root   /var/www/html/public;
+    root   /app/SPTApi/public;
     index index.php index.html index.htm;
 
     access_log /var/log/nginx/access.log;
@@ -10,17 +10,14 @@ server {
 
     location / {
        try_files $uri $uri/ /index.php?$query_string;
-       client_max_body_size 0;
     }
 
     location ~* \.php$ {
         try_files                   $uri = 404;
-        client_max_body_size 0;
         fastcgi_split_path_info     ^(.+\.php)(/.+)$;
         fastcgi_pass                127.0.0.1:9000;
         fastcgi_index               index.php;
         fastcgi_param               SCRIPT_FILENAME $document_root$fastcgi_script_name;
         include                     fastcgi_params;
     }
-
 }
