change workflow in front directory

--- a/time_front/.github/workflows/main.yml
+++ b/time_front/.github/workflows/main.yml
@@ -13,4 +13,4 @@ jobs:
     steps:
       - uses: actions/setup-node@master
       - run: npm install
-      - run: ./time_front/npm run build
+      - run: npm run build
