change other directory npm run build

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,4 +13,4 @@ jobs:
     steps:
       - uses: actions/setup-node@master
       - run: npm install
-      - run: npm run build
+      - run: npm run build  --prefix ./time_front
