--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,4 +13,4 @@ jobs:
     steps:
       - uses: actions/setup-node@master
       - run: npm install
-      - run: npm run build  --prefix /home/runner/work/time/time_front
+      - run: npm run build  --prefix /time/time_front
